pkg/objects/Gameficacao__c.object
<CustomObject>
    <fields>
        <fullName>Criterio_de_Avaliacao__c</fullName>
        <label>Critério de Avaliação</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apoio Técnico</fullName>
                </value>
                <value>
                    <fullName>Capacitação</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Coworking</fullName>
                </value>
                <value>
                    <fullName>KPI</fullName>
                </value>
                <value>
                    <fullName>Métodos</fullName>
                </value>
                <value>
                    <fullName>People</fullName>
                </value>
                <value>
                    <fullName>Pré Vendas</fullName>
                </value>
                <value>
                    <fullName>Vendas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distribuidor__c</fullName>
        <description>Pessoa que está distribuindo os pontos.</description>
        <label>Distribuidor</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Gameficações (Distribuído)</relationshipLabel>
        <relationshipName>Gamefica_es</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Distribuiu_Pontos__c</fullName>
        <formula>IF(  ISBLANK(Pontuado__r.Pontos_distribuidos__c) ,false,true)</formula>
        <label>Distribuiu Pontos?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escolheu_Nao_Distribuir_Pontos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escolheu Não Distribuir Pontos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PontoName__c</fullName>
        <formula>( Pontuado__r.Name ) &amp; &quot; &quot; &amp; &quot;-- &quot; &amp;  TEXT(Ponto__c) &amp; &quot; &quot; &amp; &quot;pontos&quot; &amp; &quot; e os critério(s) de avaliação foi/foram &quot; &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;Coworking&quot;), &quot;Coworking; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;People&quot;), &quot;People; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;Métodos&quot;), &quot;Métodos; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;Pré Vendas&quot;), &quot;Pré Vendas; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;Vendas&quot;), &quot;Vendas; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;Capacitação&quot;), &quot;Capacitação; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;KPI&quot;), &quot;KPI; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;Coach&quot;), &quot;Coach; &quot;,null ) &amp; IF ( INCLUDES ( Criterio_de_Avaliacao__c , &quot;Apoio Técnico&quot;), &quot;Apoio Técnico; &quot;,null ) &amp; BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PontoName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ponto__c</fullName>
        <label>Ponto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pessoa que está recebendo os pontos.</description>
        <label>Pontuado</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Gameficações (Recebido)</relationshipLabel>
        <relationshipName>Gamefica_es1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recebeu_ponto__c</fullName>
        <formula>IF( ISBLANK( Pontuado__c ) ,false,true)</formula>
        <label>Recebeu ponto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recebeu_pontos_de_3_pessoas_ou_mais__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recebeu pontos de 3 pessoas ou mais</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_de_pessoas__c</fullName>
        <label>Total de pessoas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gameficação</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GA - {0000}</displayFormat>
        <label>Gameficação Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gameficações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Distribuicao_invalida</fullName>
        <active>true</active>
        <description>Funcionário não pode dar ponto para si mesmo.</description>
        <errorConditionFormula>Pontuado__c = Distribuidor__c</errorConditionFormula>
        <errorDisplayField>Pontuado__c</errorDisplayField>
        <errorMessage>Funcionário não pode distribuir pontos para si mesmo.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pontos_excedidos</fullName>
        <active>true</active>
        <description>Pontuação máxima permitida para uma ÚNICA pessoa é de 250 pontos.</description>
        <errorConditionFormula>Ponto__c  &gt; 250</errorConditionFormula>
        <errorDisplayField>Ponto__c</errorDisplayField>
        <errorMessage>Pontuação máxima permitida é de 250 pontos.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pontuacao_Distribuida</fullName>
        <active>true</active>
        <errorConditionFormula>Pontuado__r.Pontos_distribuidos__c   &gt;  500</errorConditionFormula>
        <errorDisplayField>Ponto__c</errorDisplayField>
        <errorMessage>Já distribuiu a pontuação máxima.</errorMessage>
    </validationRules>
</CustomObject>