pkg/objects/Gameficacao__c/validationRules/Pontos_excedidos.validationRule-meta.xml
<ValidationRule>
    <fullName>Pontos_excedidos</fullName>
    <active>true</active>
    <description>Pontuação máxima permitida para uma ÚNICA pessoa é de 250 pontos.</description>
    <errorConditionFormula>Ponto__c  &gt; 250</errorConditionFormula>
    <errorDisplayField>Ponto__c</errorDisplayField>
    <errorMessage>Pontuação máxima permitida é de 250 pontos.</errorMessage>
</ValidationRule>